--- a/src/my-app.html
+++ b/src/my-app.html
@@ -70,24 +70,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         data="{{routeData}}"
         tail="{{subroute}}"></app-route>
 
-    <app-drawer-layout fullbleed>
+    <!--<app-drawer-layout fullbleed>
       <!-- Drawer content -->
-      <app-drawer>
+      <!--<app-drawer>
         <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="view1" href="/view1">View One</a>
           <a name="view2" href="/view2">View Two</a>
           <a name="view3" href="/view3">View Three</a>
         </iron-selector>
-      </app-drawer>
+      </app-drawer>-->
 
       <!-- Main content -->
-      <app-header-layout has-scrolling-region>
+      <app-header-layout has-scrolling-region fullbleed>
 
         <app-header condenses reveals effects="waterfall">
           <app-toolbar>
-            <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-            <div main-title>My App</div>
+            <!--<paper-icon-button icon="menu" drawer-toggle></paper-icon-button>-->
+            <div main-title><iron-icon icon=clo:mobile-icon></iron-icon></div>
           </app-toolbar>
         </app-header>
 
@@ -102,7 +102,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <my-view404 name="view404"></my-view404>
         </iron-pages>
       </app-header-layout>
-    </app-drawer-layout>
+    <!--</app-drawer-layout>-->
   </template>
 
   <script>
