changed color scheme

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -22,11 +22,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="my-icons.html">
 
+
 <dom-module id="my-app">
   <template>
     <style>
       :host {
-        --app-primary-color: #4285f4;
+        --app-primary-color: #6fa8dc;
         --app-secondary-color: black;
 
         display: block;
