--- a/src/my-app.html
+++ b/src/my-app.html
@@ -40,6 +40,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --paper-icon-button-ink-color: white;
       }
 
+      app-toolbar div {
+        text-align: center;
+      }
+
       .drawer-list {
         margin: 0 20px;
       }
@@ -65,6 +69,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       #header-icon {
         --iron-icon-height: 64px;
         --iron-icon-width: 64px;
+        margin-left: auto;
+        margin-right: auto;
       }
     </style>
 
