--- a/src/my-main.html
+++ b/src/my-main.html
@@ -56,8 +56,8 @@ margin: auto;
 		Cropped image:
 		</div>
 		<div id="preview"></div>
-		<script src="ImageCropperTest.js"></script>
-		<script src="ImageCropper.js"></script>
+		<script src="../js/ImageCropperTest.js"></script>
+		<script src="../js/ImageCropper.min.js"></script>
 		
 	</body>
 </html>
