--- a/src/my-app.html
+++ b/src/my-app.html
@@ -24,7 +24,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 
 <dom-module id="my-app">
-  <template>
+    <template>
     <style>
       :host {
         --app-primary-color: #6fa8dc;
@@ -100,65 +100,66 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <my-view1 name="view1"></my-view1>
         <my-view2 name="view2"></my-view2>
         <my-view3 name="view3"></my-view3>
+        <my-view4 name="view4"></my-view4>
+        <my-view5 name="view5"></my-view5>
         <my-view404 name="view404"></my-view404>
       </iron-pages>
     </app-header-layout>
     <!--</app-drawer-layout>-->
   </template>
 
-  <script>
-    Polymer({
-      is: 'my-app',
+    <script>
+        Polymer({
+            is: 'my-app',
 
-      properties: {
-        page: {
-          type: String,
-          reflectToAttribute: true,
-          observer: '_pageChanged'
-        },
+            properties: {
+                page: {
+                    type: String,
+                    reflectToAttribute: true,
+                    observer: '_pageChanged'
+                },
 
-        visited: {
-          type: Boolean,
-          observer: '_firstTime'
-        }
-      },
+                visited: {
+                    type: Boolean,
+                    observer: '_firstTime'
+                }
+            },
 
-      observers: [
-        '_routePageChanged(routeData.page)'
-      ],
+            observers: [
+                '_routePageChanged(routeData.page)'
+            ],
 
-      ready: function(page) {
-          if (localStorage.visited != 1) {
-            console.log('Not visited');
-            this.visited = true;
-            localStorage.visited = 1;
-          }
-          else {
-            console.log('Youve been here before');
-          }
-      },
+            ready: function(page) {
+                if (localStorage.visited != 1) {
+                    console.log('Not visited');
+                    this.visited = true;
+                    localStorage.visited = 1;
+                } else {
+                    console.log('Youve been here before');
+                }
+            },
 
-      _routePageChanged: function(page) {
-        this.page = page || 'view2';
-        // if(this.page === 'view1') {
-        //   this.page == 'view2';
-        // }
-      },
+            _routePageChanged: function(page) {
+                this.page = page || 'view2';
+                // if(this.page === 'view1') {
+                //   this.page == 'view2';
+                // }
+            },
 
-      _pageChanged: function(page) {
-        // Load page import on demand. Show 404 page if fails
-        var resolvedPageUrl = this.resolveUrl('my-' + page + '.html');
-        this.importHref(resolvedPageUrl, null, this._showPage404, true);
-      },
+            _pageChanged: function(page) {
+                // Load page import on demand. Show 404 page if fails
+                var resolvedPageUrl = this.resolveUrl('my-' + page + '.html');
+                this.importHref(resolvedPageUrl, null, this._showPage404, true);
+            },
 
-      _showPage404: function() {
-        this.page = 'view404';
-      },
+            _showPage404: function() {
+                this.page = 'view404';
+            },
 
-      _firstTime: function() {
-        console.log('First Time Function')
-        this.page = 'view1';
-      }
-    });
-  </script>
+            _firstTime: function() {
+                console.log('First Time Function')
+                this.page = 'view1';
+            }
+        });
+    </script>
 </dom-module>
