--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -23,9 +23,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card">
       <div class="circle">1</div>
-      <h1>View One</h1>
-      <p>Ut labores minimum atomorum pro. Laudem tibique ut has.
-      <p>Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Cu mei vide viris gloriatur, at populo eripuit sit.</p>
+      <h1>Help Page</h1>
+      <p>Please Look at the following video</p> 
+      <p><img src = "http://www.netanimations.net/Moving-animated-picture-of-dancing-green-monkey.gif"/></p>
     </div>
   </template>
 
