--- a/src/my-app.html
+++ b/src/my-app.html
@@ -99,7 +99,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <iron-pages selected="[[page]]" attr-for-selected="name" fallback-selection="view404" role="main">
         <my-view1 name="view1"></my-view1>
         <my-view2 name="view2" page="{{routeData.page}}"></my-view2>
-        <my-view3 name="view3"></my-view3>
+        <my-view3 name="view3" page="{{routeData.page}}"></my-view3>
         <my-view4 name="view4"></my-view4>
         <my-view5 name="view5"></my-view5>
         <my-view404 name="view404"></my-view404>
