Begin Reverse Mechanism View3

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -114,9 +114,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             properties: {
                 page: {
-                    type: String,
-                    reflectToAttribute: true,
-                    observer: '_pageChanged'
+                  type: String,
+                  reflectToAttribute: true,
+                  observer: '_pageChanged'
+                },
+
+                lastpage: {
+                  type: String,
+                  reflectToAttribute: true
                 },
 
                 visited: {
@@ -140,10 +145,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             },
 
             _routePageChanged: function(page) {
-                this.page = page || 'view2';
-                // if(this.page === 'view1') {
-                //   this.page == 'view2';
-                // }
+              this.lastpage = this.page;
+              this.page = page || 'view2';
+              // if(this.page === 'view1') {
+              //   this.page == 'view2';
+              // }
             },
 
             _pageChanged: function(page) {
