--- a/src/my-app.html
+++ b/src/my-app.html
@@ -102,6 +102,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <my-view3 name="view3" page="{{routeData.page}}"></my-view3>
         <my-view4 name="view4"></my-view4>
         <my-view5 name="view5"></my-view5>
+        <my-view6 name="view6"></my-view6>
+        <my-view7 name="view7"></my-view7>
+        <my-view8 name="view8"></my-view8>
+        <my-view9 name="view9"></my-view9>
         <my-viewloading name="viewloading" page="{{routeData.page}}"></my-viewloading>    
         <my-view404 name="view404"></my-view404>
       </iron-pages>
