--- a/src/my-view5.html
+++ b/src/my-view5.html
@@ -12,7 +12,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="my-view5">
-  <template>
+    <template>
     <style include="shared-styles">
       :host {
         display: block;
@@ -52,7 +52,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <div id="container">
 
 <div id ="tile-single"><a id= "site" href="site">
-  <img src="http://images.footballfanatics.com/FFImage/thumb.aspx?i=/productImages/_1801000/ff_1801696_xl.jpg"></a>
+                <img src="https://cdn.shopify.com/s/files/1/0447/0021/products/32256_5796375e68a5d5.47013347_207-ATM-MAROON_large_c9291206-b4ec-41bd-a158-7143ed2d6af0.png"></a>
    <div id="data"> 
        <p id="item-info"><b>This is an Awesome Shirt</p>
        <p id ="item-cost">$5.99</p><b></div> 
@@ -69,9 +69,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
  
   </template>
 
-  <script>
-    Polymer({
-      is: 'my-view5'
-    });
-  </script>
+    <script>
+        Polymer({
+            is: 'my-view5'
+        });
+    </script>
 </dom-module>
