--- a/src/my-view9.html
+++ b/src/my-view9.html
@@ -47,12 +47,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
  text-align: left;
 	
  }
+
+ button {
+ font-family: Arial,Helvetica,sans-serif;
+ font-size: 150%;
+ width:100%;
+ 
+}
     </style>
 
     <div id="container">
 
 <div id ="tile-single"><a id= "site" href="site">
-  <img src="http://images.footballfanatics.com/FFImage/thumb.aspx?i=/productImages/_1801000/ff_1801696_xl.jpg"></a>
+                <img src="https://cdn-img-3.wanelo.com/p/bc4/443/d63/06ec2c782912dfe21ea5e14/x354-q80.jpg"></a>
    <div id="data"> 
        <p id="item-info"><b>This is an Awesome Shirt</p>
        <p id ="item-cost">$5.99</p><b></div> 
