--- a/src/my-view8.html
+++ b/src/my-view8.html
@@ -47,12 +47,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
  text-align: left;
 	
  }
+ button {
+ font-family: Arial,Helvetica,sans-serif;
+ font-size: 150%;
+ width:100%;
+ 
+}
     </style>
 
     <div id="container">
 
 <div id ="tile-single"><a id= "site" href="site">
-  <img src="http://images.footballfanatics.com/FFImage/thumb.aspx?i=/productImages/_1801000/ff_1801696_xl.jpg"></a>
+                <img src="http://assets.academy.com/mgen/45/10678445.jpg?is=640,640"></a>
    <div id="data"> 
        <p id="item-info"><b>This is an Awesome Shirt</p>
        <p id ="item-cost">$5.99</p><b></div> 
