--- a/src/my-view6.html
+++ b/src/my-view6.html
@@ -33,10 +33,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	margin:auto;    
 }
 
-#footer img{ 
-	width: 40%;
-    height: 30px;
-    width: 40px;
+#footer{ 
+	width: 50%;
+    height: 50px;
+    width: 60px;
   } 
  #item-cost
  {
@@ -57,16 +57,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div id="container">
 
-<div id ="tile-single"><a id= "site" href="site">
-                <img src="http://ecx.images-amazon.com/images/I/41KIAT54TvL.01_SL500_.jpg"></a>
+<div id ="tile-single">
+                <img src="http://ecx.images-amazon.com/images/I/41KIAT54TvL.01_SL500_.jpg">
    <div id="data"> 
        <p id="item-info"><b>This is an Awesome Shirt</p>
        <p id ="item-cost">$6.99</p><b></div> 
 </div>
+<a href = "http://shedepot.com/womens-texas-am-aggies-34-sleeve-glitter-henley-shirt/">
+<button type="button">Buy</button></a>
 
-<button type="button">Buy</button>
-
-<img id="footer" src="../images/american.jpg"/>
+<img id="footer" src="../images/oak.jpg"/>
 
 </div>
 
