--- a/src/my-view7.html
+++ b/src/my-view7.html
@@ -63,8 +63,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
        <p id="item-info"><b>This is an Awesome Shirt</p>
        <p id ="item-cost">$11.99</p><b></div> 
 </div>
-
-<button type="button">Buy</button>
+<a href = "https://www.pinterest.com/pin/269371621438226165/">
+<button type="button">Buy</button></a>
 
 <img id="footer" src="../images/oak.jpg"/>
 
