--- a/src/my-view9.html
+++ b/src/my-view9.html
@@ -33,11 +33,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	margin:auto;    
 }
 
-#footer img{ 
+#footer{ 
 	width: 40%;
-    height: 30px;
-    width: 40px;
-  } 
+    height: 50px;
+    width: 60px;
+  }  
  #item-cost
  {
  text-align: left;  
@@ -58,8 +58,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div id="container">
 
-<div id ="tile-single"><a id= "site" href="site">
-                <img src="https://cdn-img-3.wanelo.com/p/bc4/443/d63/06ec2c782912dfe21ea5e14/x354-q80.jpg"></a>
+<div id ="tile-single">
+                <img src="https://cdn-img-3.wanelo.com/p/bc4/443/d63/06ec2c782912dfe21ea5e14/x354-q80.jpg">
    <div id="data"> 
        <p id="item-info"><b>This is an Awesome Shirt</p>
        <p id ="item-cost">$5.99</p><b></div> 
