--- a/src/my-view7.html
+++ b/src/my-view7.html
@@ -57,8 +57,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div id="container">
 
-<div id ="tile-single"><a id= "site" href="site">
-                <img src="https://s-media-cache-ak0.pinimg.com/564x/b0/1f/53/b01f5364c05bcaed8d59d75dacd0f938.jpg"></a>
+<div id ="tile-single">
+                <img src="https://s-media-cache-ak0.pinimg.com/564x/b0/1f/53/b01f5364c05bcaed8d59d75dacd0f938.jpg">
    <div id="data"> 
        <p id="item-info"><b>This is an Awesome Shirt</p>
        <p id ="item-cost">$11.99</p><b></div> 
