--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -19,6 +19,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         padding: 10px;
       }
+
+img{
+
+  width:200px;
+}
+
     </style>
 
     <div class="card">
